# gemini-calo

./: .coverage  .gitignore  README.md  instruction.md  publish.sh  pyproject.toml  template.env  test.sh  zrb_init.py
gemini_calo/: __init__.py  __main__.py  config.py  logger.py  proxy.py
gemini_calo/auth/: __init__.py  aws.py  builtin.py  extraction.py  providers.py
gemini_calo/middlewares/: auth.py  logging.py  model_override.py  rollup.py
gemini_calo/util/: __init__.py  request.py
tests/: test_auth.py  test_auth_providers.py  test_bedrock.py  test_gzip_handling.py  test_logging.py  test_main.py  test_model_override.py  test_model_routes.py  test_rollup.py
