[tool.poetry]
name = "gemini-calo"
version = "0.1.4"
description = "A Fastapi Based Proxy for Gemini API"
authors = ["Go Frendi Gunawan <gofrendiasgard@gmail.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/state-alchemists/gemini-calo"
repository = "https://github.com/state-alchemists/gemini-calo"
documentation = "https://github.com/state-alchemists/gemini-calo"

[tool.poetry.dependencies]
python = ">=3.10,<4.0.0"
fastapi = ">=0.116.1"
uvicorn = ">=0.35.0"
cachetools = "^6.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "~8.3.5"
httpx = "~0.28.1"
pytest-httpx = "~0.35.0"
pytest-cov = "~5.0.0"
pytest-asyncio = "^1.1.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.poetry.scripts]
gemini-calo = "gemini_calo.__main__:start_server"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
